@@ -44,6 +44,9 @@ Scheme files.
 \fB-s\fR \fIFILE\fR
 Specify a Scheme script to be executed at startup.
 .TP 8
+\fB-c\fR \fIEXPR\fR
+Specify a Scheme expression to be evaluated at startup.
+.TP 8
 \fB-o\fR, \fB--output\fR=\fIFILE\fR
 Specify a filename for PostScript output.  This command line argument
 is useful when running \fBgschem\fR from a shell script and with a
